--- a/Installers/MediaDownloaderInstaller/Bundle.wxs
+++ b/Installers/MediaDownloaderInstaller/Bundle.wxs
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<Wix xmlns="http://schemas.microsoft.com/wix/2006/wi"
-     xmlns:bal="http://schemas.microsoft.com/wix/BalExtension">
+<Wix xmlns:bal="http://schemas.microsoft.com/wix/BalExtension"
+     xmlns="http://schemas.microsoft.com/wix/2006/wi">
 
     <?ifndef ProductName ?>
     <?define ProductName = "Media Downloader"?>
@@ -17,7 +17,7 @@
     <?ifndef UpgradeCode ?>
     <?define UpgradeCode = "{E17BEB49-DE59-4B39-8806-37B99484A806}"?>
     <?endif?>
-    
+
     <Bundle Name="$(var.ProductName)"
             Version="$(var.ProductVersion)"
             Manufacturer="$(var.Manufacturer)"
@@ -26,16 +26,16 @@
 
         <BootstrapperApplicationRef Id="WixStandardBootstrapperApplication.HyperlinkLicense">
             <bal:WixStandardBootstrapperApplication
-                LicenseUrl=""
-                SuppressOptionsUI="yes"
-                LogoFile="..\Common\Images\icon64.png" />
+                    LicenseUrl=""
+                    SuppressOptionsUI="yes"
+                    LogoFile="..\Common\Images\icon64.png"/>
         </BootstrapperApplicationRef>
 
         <Chain>
             <MsiPackage
-                Id="MediaDownloaderSetup"
-                SourceFile="$(var.MediaDownloaderSetup.TargetDir)$(var.MediaDownloaderSetup.TargetName)$(var.MediaDownloaderSetup.TargetExt)"
-                DisplayInternalUI="no" />
+                    Id="MediaDownloaderSetup"
+                    SourceFile="$(var.MediaDownloaderSetup.TargetDir)$(var.MediaDownloaderSetup.TargetName)$(var.MediaDownloaderSetup.TargetExt)"
+                    DisplayInternalUI="no"/>
         </Chain>
     </Bundle>
 </Wix>
