--- a/MediaDownloader/UI/Views/MainWindowView.xaml
+++ b/MediaDownloader/UI/Views/MainWindowView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MediaDownloader.MainWindow"
+﻿<Window x:Class="MediaDownloader.UI.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:MediaDownloader"
         xmlns:properties="clr-namespace:MediaDownloader.Properties"
         mc:Ignorable="d"
-        Title="{x:Static properties:Resources.AppName}" Width="500" SizeToContent="Height" ResizeMode="NoResize">
+        Title="{x:Static properties:Resources.AppName}" Width="500" SizeToContent="Height" ResizeMode="NoResize"
+        DataContext="{Binding ViewModel, RelativeSource={RelativeSource Self}}">
     <Window.Resources>
         <local:DownloadStatusConverter x:Key="DownloadStatusConverter" />
     </Window.Resources>
@@ -109,10 +110,9 @@
             </Button>
             <Button Grid.Column="1" Grid.Row="0" Margin="5"
                     Command="{Binding ShowDownloadedItemsButtonClick}"
-                    IsEnabled="{Binding ShowDownloadedItemsButtonIsEnabled}"
-                    Visibility="{Binding ShowDownloadedItemsButtonVisibility}">
+                    IsEnabled="{Binding ShowDownloadedItemsButtonIsEnabled}">
                 <StackPanel Orientation="Horizontal">
-                    <Image Source="Images/icon_show.png" Height="24" Width="24" Margin="0,0,5,0" />
+                    <Image Source="/Images/icon_show.png" Height="24" Width="24" Margin="0,0,5,0" />
                     <TextBlock Text="{x:Static properties:Resources.ShowDownloadedItemsButtonText}"
                                VerticalAlignment="Center" />
                 </StackPanel>
