--- a/MediaDownloader/App.xaml
+++ b/MediaDownloader/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="MediaDownloader.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindowView.xaml">
+             StartupUri="/UI/Views/MainWindowView.xaml">
     <Application.Resources>
 
     </Application.Resources>
