refactor: moved the Downloader logic to a separate module

--- a/MediaDownloader/UI/Views/MainWindow.xaml
+++ b/MediaDownloader/UI/Views/MainWindow.xaml
@@ -4,7 +4,6 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:properties="clr-namespace:MediaDownloader.Properties"
-        xmlns:download="clr-namespace:MediaDownloader.Download"
         xmlns:converters="clr-namespace:MediaDownloader.UI.Converters"
         mc:Ignorable="d"
         Title="{x:Static properties:Resources.AppName}" Width="500" SizeToContent="Height" ResizeMode="NoResize"
@@ -16,7 +15,7 @@
                 <ResourceDictionary
                     Source="pack://application:,,,/MediaDownloader;component/UI/Themes/Generic.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            <download:DownloadStatusConverter x:Key="DownloadStatusConverter" />
+            <converters:DownloadStatusConverter x:Key="DownloadStatusConverter" />
             <converters:HumanizedDateTimeConverter x:Key="HumanizedDateTimeConverter" />
         </ResourceDictionary>
     </Window.Resources>
