fix: fixed threading issues
github: https://github.com/yuri-maxiutenko/MediaDownloader/issues/14

--- a/MediaDownloader/UI/Views/MainWindow.xaml
+++ b/MediaDownloader/UI/Views/MainWindow.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
         Title="{x:Static properties:Resources.AppName}" Width="500" SizeToContent="Height" ResizeMode="NoResize"
         DataContext="{Binding ViewModel, RelativeSource={RelativeSource Self}}"
-        Loaded="MainWindow_OnLoaded" Unloaded="MainWindow_OnUnloaded">
+        Loaded="MainWindow_OnLoaded">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
